[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "=0.8.5"
anyhow = "=1.0.75"
rocket = { version = "=0.5.0-rc.4", features=["json", "secrets", "uuid"] }
rocket_dyn_templates = { version="=0.1.0-rc.4", features=["handlebars", "tera"] }
scylla = "=0.10.1"
serde = { version = "1.0", features=["derive"]}
validator = { version = "0.16.1", features=["derive"] }
chrono = { version = "0.4.31", features=["serde"]}
comrak = "0.20" # markdown

redis = { version = "0.23.3", features=["r2d2", "cluster-async", "tokio-comp", "connection-manager", "keep-alive", "ahash"]}
# r2d2 - enables r2d2 connection pool support
# cluster-async / tokio-comp - async support
# connection-manager - enables automatic reconnection
# keep-alive - uses socket2 to enable keep-alive
# ahash - ahash map/set support internally (+7-10% performance)