[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "=0.8.5"
anyhow = "=1.0.80"
rocket = { version = "=0.5.0", features=["json", "secrets", "uuid"] }
rocket_dyn_templates = { version="=0.1.0", features=["tera"] }
tera = "=1.19.1"
serde = { version = "1.0", features=["derive"]}
serde_json = "=1.0.114"
validator = { version = "0.17.0", features=["derive"] }
chrono = { version = "0.4.31", features=["serde"]}
argon2 = { version = "0.5.2"}
comrak = "0.21.0" # markdown
aws-config = { version = "1.0.3", features = ["behavior-version-latest"] }
aws-sdk-sesv2 = "1.4.0"
murmur3 = "=0.5.2"
qrcode = "=0.13.0"
futures = "=0.3.30"

moka = { version = "0.12.5", features = ["future"] }
rusqlite = { version = "0.31.0", features = ["bundled", "blob", "chrono", "serde_json", "uuid"]}