[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["secrets", "json"] }
serde = { version = "1.0", features=["derive"]}
anyhow = "=1.0.86"
yaml-rust2 = "0.8"
indoc = "2.0.5"
slugify = "0.1.0"
url = { version = "2", features = ["serde"] }
image = "0.25.2"
webp = "0.3"
