[package]
name = "cardchapter"
description = "this is a weird one, it's kind of a statically hosted website but for micro-presentations"
version = "0.1.13"
edition = "2021"
license = "AGPL-3.0-or-later"
categories = ["command-line-utilities"]
exclude = ["/assets", "/example", ".ministry", "Makefile", "/temp_assets"]
badges = ["experimental"]
repository = "https://github.com/cube-drone/ministry"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0", features=["derive"]}
anyhow = "=1.0.86"
yaml-rust2 = "0.8"
indoc = "2.0.5"
slugify = "0.1.0"
url = { version = "2", features = ["serde"] }
image = "0.25.2"
webp = "0.3"
qrcode = "0.14.1"
moka = { version = "0.12.8", features = ["future"] }
